--- a/app/assets/stylesheets/reviews.scss
+++ b/app/assets/stylesheets/reviews.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the reviews controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+  main {
+	  width: 70%;
+	  border-radius: 10px;
+	  background-color: white;
+	  margin: 0 auto;
+	  padding: 50px 0;
+	  position: relative;
+  }
+
