--- a/app/views/comics/index.html.erb
+++ b/app/views/comics/index.html.erb
@@ -1,42 +1,46 @@
 
-<h1>Comics</h1>
-
 <main>
   <div id="tag_cloud">
-    <% tag_cloud Review.tag_counts.limit(5), %w{s m l} do |tag, css_class| %>
+    <% tag_cloud Review.tag_counts.order("id DESC").limit(10), %w{s m l} do |tag, css_class| %>
       <%= link_to tag.name, tag_path(tag.name), class: css_class %>
     <% end %>
   </div>
 
   <% @comics.each do |comic| %>
   <div class="comic-content">
-      <%= link_to comic_path(comic) do %>
-        <% if comic.cover_img.present? %>
-          <%= image_tag comic.cover_img %>
-        <% else %>
-          <%= image_tag ("defaultcomic.png"), :size => '150x150' %>
-        <% end %>
+    <%= link_to comic_path(comic) do %>
+      <% if comic.cover_img.present? %>
+        <%= image_tag comic.cover_img %>
+      <% else %>
+        <%= image_tag ("defaultcomic.png"), :size => '150x150' %>
       <% end %>
+    <% end %>
     <div class="comic-text">
-      <div id="star-rate-<%= comic.review.id %>"></div>
-        <script>
-        $('#star-rate-<%= comic.review.id %>').raty({
-          path: '/assets',
-          readOnly: true,
-          score: <%= comic.review.star %>,
-        });
-        </script>
+      <% if comic.review.present? %>
+        <div id="star-rate-<%= comic.review.id %>"></div>
+          <script type="text/javascript">
+          $('#star-rate-<%= comic.review.id %>').raty({
+            path: '/assets',
+            readOnly: true,
+            score: <%= comic.review.star %>,
+          });
+          </script>
+      <% end %>
       <div class="word">
-        <p class="label label-primary"><span><%=  raw(comic.review.tag_list.map { |t| link_to t, tag_path(t) }.join(' , ')) %></span></p>
+        <% if comic.review.present? %>
+          <p class="label label-primary"><span><%=  raw(comic.review.tag_list.map { |t| link_to t, tag_path(t) }.join(' , ')) %></span></p>
+        <% end %>
 
         <p>タイトル</br><span><%= comic.title %></span></p>
 
-        <p>作家名</br><span><%= comic.author %></span></p>
+        <% if comic.author.present? %>
+          <p>作家名</br><span><%= comic.author %></span></p>
+        <% end %>
 
-      <% if comic.publisher.present? %>
-        <p>出版社</br><span><%= comic.publisher %></span></p>
-      <% end %>
-    </div>
+        <% if comic.publisher.present? %>
+          <p>出版社</br><span><%= comic.publisher %></span></p>
+        <% end %>
+      </div>
     </div>
   </div>
   <% end %>
@@ -48,51 +52,7 @@
 
 <style>
 
-  main {
-  width: 70%;
-  border-radius: 10px;
-  background-color: white;
-  margin: 0 auto;
-  padding: 50px 0;
-  }
 
-  #tag_cloud {
-    width: 100%;
-    text-align: center;
-    line-height: 1.6em;
-    .s { font-size: 0.8em; }
-    .m { font-size: 1.2em; }
-    .l { font-size: 1.8em; }
-  }
-
-  .comic-content {
-    border: 1px solid #a7aab0;
-    border-radius: 10px;
-    width: 80%;
-    display: flex;
-    margin: 10px auto;
-    padding: 30px 15px 30px 45px;
-  }
-
-  .comic-text {
-    margin-left: 30px;
-    overflow: hidden;
-  }
-
-  .word {
-    overflow: hidden;
-  }
-
-  .word p {
-  font-size: 12px;
-  padding: 5px 0;
-  margin: 0;
-  overflow: hidden;
-  text-overflow: ellipsis;
-　white-space: nowrap;
-  }
-
-  span {
-    font-size: 14px;
-  }
 </style>
+
+
