--- a/app/views/comics/tag_index.html.erb
+++ b/app/views/comics/tag_index.html.erb
@@ -1,6 +1,4 @@
 
-<h1>Comics</h1>
-
 <main>
   <div id="tag_cloud">
     <% tag_cloud Review.tag_counts.limit(5), %w{s m l} do |tag, css_class| %>
@@ -10,42 +8,45 @@
 
   <% @tag_reviews.each do |tr| %>
   <div class="comic-content">
-      <%= link_to comic_path(tr.comic_id) do %>
-        <% if tr.comic.cover_img.present? %>
-          <%= image_tag tr.comic.cover_img %>
-        <% else %>
-          <%= image_tag ("defaultcomic.png"), :size => '150x150' %>
-        <% end %>
+    <%= link_to comic_path(tr.comic_id) do %>
+      <% if tr.comic.cover_img.present? %>
+        <%= image_tag tr.comic.cover_img %>
+      <% else %>
+        <%= image_tag ("defaultcomic.png"), :size => '150x150' %>
       <% end %>
+    <% end %>
     <div class="comic-text">
-      <div id="star-rate-<%= tr.comic.review.id %>"></div>
-        <script>
-        $('#star-rate-<%= tr.comic.review.id %>').raty({
-          path: '/assets',
-          readOnly: true,
-          score: <%= tr.comic.review.star %>,
-        });
-        </script>
-      <div class="word">
-        <p class="label label-primary"><%=  raw(tr.comic.review.tag_list.map { |t| link_to t, tag_path(t) }.join(',')) %></p>
-
-        <p><%= tr.comic.title %></p>
-
-        <p>作家名<%= tr.comic.author %></p>
-
-      <% if tr.comic.publisher.present? %>
-        <p>出版社</br><%= tr.comic.publisher %></p>
+      <% if tr.comic.review.present? %>
+        <div id="star-rate-<%= tr.comic.review.id %>"></div>
+          <script>
+          $('#star-rate-<%= tr.comic.review.id %>').raty({
+            path: '/assets',
+            readOnly: true,
+            score: <%= tr.comic.review.star %>,
+          });
+          </script>
       <% end %>
-    </div>
+      <div class="word">
+        <% if tr.comic.review.present? %>
+          <p class="label label-primary"><span><%=  raw(tr.comic.review.tag_list.map { |t| link_to t, tag_path(t) }.join(',')) %></span></p>
+        <% end %>
+
+        <p>タイトル</br><span><%= tr.comic.title %></span></p>
+
+        <% if tr.comic.author.present? %>
+          <p>作家名<%= tr.comic.author %></p>
+        <% end %>
+
+        <% if tr.comic.publisher.present? %>
+          <p>出版社</br><span><%= tr.comic.publisher %></span></p>
+        <% end %>
+      </div>
     </div>
   </div>
   <% end %>
 
-  <%#= paginate @comics, class: "paginate" %>
+  <%= paginate @tag_reviews, class: "paginate" %>
 
-  <br>
-
-  <%= link_to 'New Comic', new_comic_path %>
 </main>
 
 
