--- a/app/views/comics/new.html.erb
+++ b/app/views/comics/new.html.erb
@@ -12,7 +12,7 @@
   	<div class="new-messege-caution">
 		<p class="new-messege-caution2">注意事項</p>
 		<p class="new-messege-p">・タイトル名で検索してください</p>
-		<p class="new-messege-p">・ふりがなでの検索は対応しておりません。</p>
+		<p class="new-messege-p">・ふりがなでの検索は対応しておりません</p>
 		<p class="new-messege-p2">(例) 「鬼滅の刃」を検索したい！</br>
 		○ 「鬼滅　刃」<span>× 「きめつ　やいば」</span></p>
 		</div>
