--- a/app/views/users/about.html.erb
+++ b/app/views/users/about.html.erb
@@ -1,11 +1,11 @@
 
 <main>
   <section>
-		<h1>ようこそ！「Simic」へ</h1>
+		<h1>こんにちは「Simic」です</h1>
 
 		<h3>当サイトは、</h3>
 		  <h3 class="concept">「作品の内容をざっくり把握してから読みたい人向け」の</h3>
-		  <h3 class="concept2">漫画レビュー投稿サイトです。</h3>
+		  <h3 class="concept2">漫画レビュー投稿サイトです</h3>
 
 		<p>作品を表すキーワードが並んでいたら、内容がざっくりを把握しやすいのでは？</p>
 		<p>作品ごとに自由にタグ付けができ、「主人公最強系」「おじさんと可愛いもの」なんて、心惹かれるキーワードにも出会えるかもしれません！</p>
