--- a/app/views/comics/index.html.erb
+++ b/app/views/comics/index.html.erb
@@ -1,58 +1,71 @@
 
 <main>
-  <div id="tag_cloud">
+<% if @comics.present? %>
+    <div id="tag_cloud">
     <% tag_cloud Review.tag_counts.order("id DESC").limit(10), %w{s m l} do |tag, css_class| %>
       <%= link_to tag.name, tag_path(tag.name), class: css_class %>
     <% end %>
   </div>
 
   <% @comics.each do |comic| %>
-  <div class="comic-content">
-    <%= link_to comic_path(comic) do %>
-      <% if comic.cover_img.present? %>
-        <%= image_tag comic.cover_img %>
-      <% else %>
-        <%= image_tag ("defaultcomic.png"), :size => '150x150' %>
-      <% end %>
-    <% end %>
-    <div class="comic-text">
-      <% if comic.review.present? %>
-        <div id="star-rate-<%= comic.review.id %>"></div>
-          <script type="text/javascript">
-          $('#star-rate-<%= comic.review.id %>').raty({
-            path: '/assets',
-            readOnly: true,
-            score: <%= comic.review.star %>,
-          });
-          </script>
-      <% end %>
-      <div class="word">
-        <% if comic.review.present? %>
-          <p class="label label-primary"><span><%=  raw(comic.review.tag_list.map { |t| link_to t, tag_path(t) }.join(' , ')) %></span></p>
-        <% end %>
+    <div class="comic-content">
+      <div class="review-user">
+          <%= image_tag comic.user.prof_image.thumb.url, size:'35x35', class: "prof-image" %>
+        <div class="prof-name">
+          <%= link_to comic.user.nickname, user_path(comic.user_id), class: "prof-name2" %>
+        </div>
+      </div>
+      <div class="comic-show">
+        <div class="cover-img">
+          <%= link_to comic_path(comic) do %>
+            <% if comic.cover_img.present? %>
+              <%= image_tag comic.cover_img %>
+            <% else %>
+              <%= image_tag ("defaultcomic.png"), :size => '150x150' %>
+            <% end %>
+          <% end %>
+        </div>
+        <div class="comic-text">
+          <% if comic.review.present? %>
+            <div id="star-rate-<%= comic.review.id %>"></div>
+              <script type="text/javascript">
+              $('#star-rate-<%= comic.review.id %>').raty({
+                path: '/assets',
+                readOnly: true,
+                score: <%= comic.review.star %>,
+              });
+              </script>
+          <% end %>
+          <div class="word">
+            <% if comic.review.present? %>
+              <p class="label label-primary"><span><%=  raw(comic.review.tag_list.map { |t| link_to t, tag_path(t) }.join(' , ')) %></span></p>
+            <% end %>
 
-        <p>タイトル</br><span><%= comic.title %></span></p>
+            <p>タイトル</br><span><%= comic.title %></span></p>
 
-        <% if comic.author.present? %>
-          <p>作家名</br><span><%= comic.author %></span></p>
-        <% end %>
+            <% if comic.author.present? %>
+              <p>作家名</br><span><%= comic.author %></span></p>
+            <% end %>
 
-        <% if comic.publisher.present? %>
-          <p>出版社</br><span><%= comic.publisher %></span></p>
-        <% end %>
+            <% if comic.publisher.present? %>
+              <p>出版社</br><span><%= comic.publisher %></span></p>
+            <% end %>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
   <% end %>
+<% else %>
+  <h1 class="no-comic">該当する作品が見つかりませんでした</h1>
+  <p class="no-comic-p">キーワードを変えて、再検索してください</p>
+  <%= image_tag ("neko.png"), class: "neko-img" %>
+  <%= link_to 'トップへ戻る', comics_path, class: "btn btn-sm btn-outline-primary no-comic-btn" %>
+<% end %>
 
   <%= paginate @comics, class: "paginate" %>
 
 </main>
 
 
-<style>
-
-
-</style>
 
 
