--- a/app/views/comics/search.html.erb
+++ b/app/views/comics/search.html.erb
@@ -3,55 +3,57 @@
 	<% if @comics.present? %>
 		<% @comics.each do |comic| %>
 			<div class="comic-content">
-				<% if comic["volumeInfo"]["imageLinks"].present? %>
-				  <%= image_tag comic["volumeInfo"]["imageLinks"]["smallThumbnail"] %>
-				<% else %>
-				  <%= image_tag ("defaultcomic.png"), :size => '150x150' %>
-				<% end %>
-
-				<div class="comic-text">
-					<div class="word">
-					</br>
-						<p> タイトル</br>
-						<% if comic["volumeInfo"]["title"].present? %>
-						  <span><%= comic["volumeInfo"]["title"] %></span>
-						<% end %> </p>
-						<p> 作者名</br>
-						<% if comic["volumeInfo"]["authors"].present? %>
-						  <span><%= comic["volumeInfo"]["authors"].join(", ")%></span>
-						<% end %>　</p>
-						<p> 出版社</br>
-						<% if comic["volumeInfo"]["publisher"].present? %>
-						  <span><%= comic["volumeInfo"]["publisher"] %></span>
-						<% end %> </p>
-					</div>
-				</div>
-
-				<div class="comic-btn">
-					<%= form_for @comic do |f| %>
-					  <% if comic["volumeInfo"]["imageLinks"].present? %>
-					    <%= f.hidden_field :cover_img, :value => "#{comic["volumeInfo"]["imageLinks"]["smallThumbnail"]}" %>
-					  <% end %>
-					  <% if comic["volumeInfo"]["title"].present? %>
-						  <%= f.hidden_field :title, :value =>  "#{comic["volumeInfo"]["title"]}" %>
-						<% end %>
-						<% if comic["volumeInfo"]["authors"].present? %>
-						  <%= f.hidden_field :author, :value =>   "#{comic["volumeInfo"]["authors"].join(", ")}" %>
-						<% end %>
-						<% if comic["volumeInfo"]["publisher"].present? %>
-						  <%= f.hidden_field :publisher, :value =>  "#{comic["volumeInfo"]["publisher"]}" %>
-						<% end %>
-						<div class="form-group-btn">
-							<%= f.submit 'この作品をレビュー', :name => nil, class: "btn btn-default search-btn" %>
-						</div>
+				<div class="comic-show2">
+					<% if comic["volumeInfo"]["imageLinks"].present? %>
+					  <%= image_tag comic["volumeInfo"]["imageLinks"]["smallThumbnail"] %>
+					<% else %>
+					  <%= image_tag ("defaultcomic.png"), :size => '150x150' %>
 					<% end %>
+
+					<div class="comic-text">
+						<div class="word">
+						</br>
+							<p> タイトル</br>
+							<% if comic["volumeInfo"]["title"].present? %>
+							  <span><%= comic["volumeInfo"]["title"] %></span>
+							<% end %> </p>
+							<% if comic["volumeInfo"]["authors"].present? %>
+							  <p> 作者名</br>
+							  <span><%= comic["volumeInfo"]["authors"].join(", ")%></span>
+							<% end %>　</p>
+							<% if comic["volumeInfo"]["publisher"].present? %>
+							  <p> 出版社</br>
+							  <span><%= comic["volumeInfo"]["publisher"] %></span>
+							<% end %> </p>
+						</div>
+					</div>
+
+					<div class="comic-btn">
+						<%= form_for @comic do |f| %>
+						  <% if comic["volumeInfo"]["imageLinks"].present? %>
+						    <%= f.hidden_field :cover_img, :value => "#{comic["volumeInfo"]["imageLinks"]["smallThumbnail"]}" %>
+						  <% end %>
+						  <% if comic["volumeInfo"]["title"].present? %>
+							  <%= f.hidden_field :title, :value =>  "#{comic["volumeInfo"]["title"]}" %>
+							<% end %>
+							<% if comic["volumeInfo"]["authors"].present? %>
+							  <%= f.hidden_field :author, :value =>   "#{comic["volumeInfo"]["authors"].join(", ")}" %>
+							<% end %>
+							<% if comic["volumeInfo"]["publisher"].present? %>
+							  <%= f.hidden_field :publisher, :value =>  "#{comic["volumeInfo"]["publisher"]}" %>
+							<% end %>
+							<div class="form-group-btn">
+								<%= f.submit 'この作品をレビュー', :name => nil, class: "btn btn-default search-btn" %>
+							</div>
+						<% end %>
+		      </div>
 	      </div>
 			</div>
 		<% end %>
 
 	<% else %>
-    <h1 class="no-comic">該当する作品が見つかりませんでした。</h1>
-    <p class="no-comic-p">キーワードを変えて、再検索してください。</p>
+    <h1 class="no-comic">該当する作品が見つかりませんでした</h1>
+    <p class="no-comic-p">キーワードを変えて、再検索してください</p>
     <%= image_tag ("neko.png"), class: "neko-img" %>
     <%= link_to '再検索してみる', new_comic_path, class: "btn btn-sm btn-outline-primary no-comic-btn" %>
 	<% end %>
