--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,24 +1,29 @@
-<div class="profile-content">
-  <%= form_for @user, html: { multipart: true } do |f| %>
-  <div class="prof-image">
-  <% if @user.prof_image.present? %>
-    <%= image_tag @user.image.url, id: :img_prev %>
-  <% else %>
-    <%= image_tag"default.png", id: :img_prev, :size => '100x100' %>
-  <% end %>
-    <%= f.file_field :prof_image, id: :user_img %>
-    <%= f.hidden_field :prof_image_cache %>
+<main>
+  <div class="profile-content">
+    <div class="prof-edit">
+      <div class="prof-img2">
+        <%= form_for @user, html: { multipart: true } do |f| %>
+        <% if @user.prof_image.present? %>
+          <%= image_tag @user.prof_image.url, id: :img_prev, :size => '150x150', class: "prof-image" %>
+        <% else %>
+          <%= image_tag "default.png", id: :img_prev, :size => '150x150', class: "prof-image" %>
+        <% end %>
+          <%= f.file_field :prof_image, id: :user_img, class: "prof-up" %>
+          <%= f.hidden_field :prof_image_cache %>
+      </div>
+      <div class="name">
+        <p>ニックネーム</p>
+        <p><%= f.text_field :nickname, class: "form-control tag-form-style" %></p>
+      </div>
+      <div class="messege">
+      	<p>メッセージ</p>
+        <p><%= f.text_area :message, rows:'5', class: "form-control tag-form-style", placeholder: "メッセージを入力できます" %></p>
+      </div>
+      <%= f.submit "更新", class: "btn update-btn" %>
+      <% end %>
+    </div>
   </div>
-  <div class="name">
-    <%= f.text_field :nickname %>
-  </div>
-  <div class="messege">
-  	<p>メッセージ</p>
-    <%= f.text_area :message %>
-  </div>
-  <%= f.submit "更新"%>
-  <% end %>
-</div>
+</main>
 
 <script type="text/javascript">
   $(function() {
